    async I/O support and is totally select() based.  It also introduces
    a new command line arguments parsing style.  See the doc/migrating
    file for more information.
  o Fixed the delayed (-i) output sending not displaying incoming data
    immediately.
  o Verbose messages are now printed automatically in debug mode.
  o Changed copyrighter name


[*] Wed May  1 2002 - netcat v0.2.2

  o More fixes around the NLS (added the missing config.rpath script)
  o Added lib directory that will contain all netcat related libraries.
  o Added compatibility support (libcontrib) containing all the needed
    functions not provided by the OS.
  o Added GNU getopt to the compat library.
  o More changes to the netcat_getport() function. Now it should catch
    every kind of invalid input safely.


[*] Tue Apr 30 2002 - netcat v0.2.1

  o Various fixes to the Makefiles for the clean targets
  o Fixed --enable-debug configure parameter
  o Added configure option `--enable-oldhexdump', causes netcat to use the
    old hexdump style rather than my new style.
  o Added macros debug_d and debug_dv, respectively debug plus delay and
    debug verbose plus delay.  Removed the old Debug macro.
  o Restored command line switch `-w' (wait).
  o Rewrote (again) netcat_resolvehost(), this time it's a little more
    abstracted.
  o Removed libtool support (it wasn't really needed at the moment)
  o Added Native Language Support to the project
  o Added the first traslation file (italian)


[*] Mon Apr 29 2002 - netcat v0.2.0

  o Changed the define HINF to typedef netcat_host.
  o Removed comparehosts() function.
  o Removed gethostpoop() function.
  o Fixed some warnings.
  o Added file network.c, containing function netcat_resolvehost(), which is
    the equivalent of the old gethostpoop().
  o Added debug() and debug_v() routines, to improve debugging output.
    Debug() is now obsolete and will be removed soon.